# face_utils

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
face_utils/: __init__.py  cropping.py  detector.py  face_utils.py  settings.py
face_utils/cropping/: __init__.py  cropping.py
face_utils/detection/: __init__.py  detectors.py  settings.py
tests/: Untitled.ipynb  face_cropper.py
