[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "face_utils"
author = "Hermas"
author-email = "a7medhermas@gmail.com"
home-page = "https://github.com/HermasTV"
classifiers = [ "License :: OSI Approved :: Apache Software License",]
description-file = "README.md"

